--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation "androidx.palette:palette-ktx:1.0.0"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.1"
 
+    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+    //implementat "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
